--- a/libft/Makefile
+++ b/libft/Makefile
@@ -25,7 +25,8 @@ CC = gcc
 
 RM = rm -f
 
-CFLAGS = -Wall -Wextra -Werror -g3 -fsanitize=address
+CFLAGS = -Wall -Wextra -Werror
+# -g3 -fsanitize=address
 
 .c.o:
 	${CC} ${CFLAGS} -g -c $< -o ${<:.c=.o}
